@@ -1,3 +1,7 @@
+2006-06-01  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* doc/local/index.doc.in: Cosmetic changes in page layout.
+
 2006-05-31  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* tests/gf2mat_test.cpp: Missing initialisation added.
